--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,111 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    text-decoration: none;
+}
+
+html {
+    box-sizing: border-box;
+    scroll-behavior: smooth;
+    /* (1rem = 10px) */
+}
+
+body {
+    height: 100vh;
+    position: relative;
+    font-family: 'Poppins', sans-serif;
+}
+
+.nav-bar {
+    width: 100%;
+    height: 4rem;
+    position: fixed;
+    display: flex;
+    align-items: center;
+    justify-content: end;
+    background: #0F0F0F;
+    padding-right: 50px;
+}
+
+.nav-ul {
+    display: flex;
+    list-style: none;
+}
+
+.nav-li {}
+
+.nav-li a {
+    color: antiquewhite;
+    font-size: 1.5rem;
+    padding: 16px 20px;
+    transition: background-color 1s ease;
+}
+
+.nav-li a:hover {
+    background-color: rgba(24, 89, 63, 0.5);
+}
+
+.container {
+    padding-top: 4rem;
+}
+
+#about {
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: linear-gradient(180deg, #0F0F0F, #185a3f, #0F0F0F);
+}
+
+.intro {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    opacity: 0;
+    animation: fadeIn 2s forwards;
+}
+
+.fade-in-text span {
+    opacity: 0;
+    animation: fadeIn 2s forwards;
+}
+
+.introduction-name {
+    color: antiquewhite;
+    font-size: 3rem;
+    font-weight: 300;
+    font-style: italic;
+}
+
+.introduction-title {
+    font-size: 2rem;
+    font-weight: 300;
+    font-style: italic;
+    text-align: center;
+}
+
+@keyframes fadeIn {
+    from {
+        opacity: 0;
+    }
+
+    to {
+        opacity: 1;
+    }
+}
+
+.img-container {
+    width: 400px;
+}
+
+.project-img {
+    max-width: 100%;
+    height: auto;
+}
+
 /*
 font-family: 'Poppins', sans-serif;
 font-family: 'Roboto', sans-serif; 
- */
+ *
