--- a/styles.css
+++ b/styles.css
@@ -111,7 +111,7 @@ body {
 #work {
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
     height: 100vh;
     background-color: #185a3f;
@@ -273,7 +273,7 @@ body {
         justify-items: center;
         align-items: center;
         column-gap: 0;
-        row-gap: 10px;
+        row-gap: 20px;
     }
 
     .img-container {
