--- a/landing-page/landing-page.css
+++ b/landing-page/landing-page.css
@@ -1,5 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Gentium+Book+Plus:ital@1&family=Merriweather:wght@300&family=Poppins:wght@200&family=Roboto:wght@100;300;500;700&family=Rubik:wght@300&display=swap');
-
 * {
   margin: 0;
   padding: 0;
@@ -22,7 +20,8 @@ body {
   color: gainsboro;
   font-size: 100%;
   font-family: 'Poppins', sans-serif;
-  background: linear-gradient(to bottom, #232526, #414345);
+  background: linear-gradient(115deg, rgba(58, 58, 58, 0.9),
+      rgba(120, 150, 195, 0.7)), url(yu-gi-oh!-background.jpg) no-repeat center center/cover;
   background-attachment: fixed;
 }
 
@@ -31,6 +30,7 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
+  padding: 0 20px;
 }
 
 #header {
@@ -44,7 +44,7 @@ body {
   justify-content: space-around;
   align-items: center;
   width: 100%;
-  background-color: #242627;
+  background-color: rgba(36, 38, 39, 0.9);
 }
 
 .img-logo {
@@ -72,11 +72,11 @@ body {
   color: gainsboro;
   font-size: 2.5rem;
   font-weight: bold;
+  text-shadow: 1px 1px 2px black;
 }
 
 a:hover {
-  background-color: black;
-  color: white;
+  color: #ee2225;
 }
 
 #main-content {
@@ -94,6 +94,7 @@ a:hover {
 .sub-desc {
   font-size: 3rem;
   text-align: center;
+  text-shadow: 1px 1px 2px black;
 }
 
 .form {
@@ -111,12 +112,14 @@ a:hover {
 
 .button {
   width: 12rem;
-  background-color: #c61f22;
+  background-color: #ee2225;
   font-size: 2rem;
   font-weight: bold;
   color: white;
+  text-shadow: 1px 1px 2px black;
   padding: 0.5rem 2rem;
   border-radius: 0.3rem;
+  border: none;
   cursor: pointer;
 }
 
@@ -132,6 +135,7 @@ a:hover {
   margin-top: 6rem;
   margin-bottom: 6rem;
   font-size: 1.6rem;
+  text-shadow: 1px 1px 2px black;
 }
 
 .grid {
@@ -154,6 +158,7 @@ a:hover {
 
 .fa-solid {
   font-size: 5rem;
+  text-shadow: 1px 1px 2px black;
 }
 
 .desc {
@@ -172,52 +177,62 @@ a:hover {
 
 #pricing {
   display: flex;
-  flex-direction: row;
   justify-content: center;
   gap: 2rem;
-  padding: 2rem;
-
+  margin-bottom: 20px;
 }
 
 .prices {
   display: flex;
   flex-direction: column;
+  justify-content: space-around;
   align-items: center;
-  border: 0.2rem solid black;
-  height: 31rem;
+  border: none;
+  border-radius: 5px;
+  box-shadow: 5px 5px 5px #000;
+  height: 300px;
   width: 50rem;
+  background-color: rgba(220, 220, 220, 0.6);
+  color: #000;
 }
 
-.prices h1 {
-  color: black;
-  font-size: 2.2rem;
-  font-weight: bolder;
-  text-align: center;
-  background-color: gainsboro;
+.item-name {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 1px 1px 0 0;
   width: 100%;
+  height: 20px;
+  color: #000;
+  font-weight: 600;
+  font-size: 2.2rem;
+  padding: 5px;
+  height: 35px;
 }
 
-.prices h2 {
-  font-size: 3rem;
-  font-weight: bold;
-  text-align: center;
-  padding: 2rem 0;
-}
-
-.prices ul {
-  list-style: none;
-  text-align: left;
+.value {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   font-size: 2rem;
-  font-weight: bold;
-  padding: 0;
-  padding-bottom: 3rem;
+  width: 100%;
+  background-color: transparent;
+}
+
+.names-list li {
+  list-style: none;
+  font-size: 2rem;
+  padding: 0 5px;
+}
+
+.select-btn-div {
+  padding-bottom: 5px;
 }
 
 #footer {
   display: block;
-  background-color: #242627;
-  width: 90%;
-  max-width: 120rem;
+  background-color: rgba(36, 38, 39, 0.9);
+  width: 100vw;
 }
 
 #footer ul {
@@ -260,15 +275,9 @@ a:hover {
     padding-bottom: 1rem;
   }
 
-  .prices ul {
+  .names-list li {
     font-size: 1.4rem;
     text-align: center;
-    padding-bottom: 1rem;
-
-  }
-
-  .booster li {
-    margin-bottom: 0.7rem;
   }
 
   .button {
@@ -282,11 +291,5 @@ a:hover {
 @media (max-width: 460px) {
   html {
     font-size: 50%;
-  }
-}
-
-@media (max-width: 375px) {
-  html {
-    font-size: 45%;
   }
 }
