--- a/landing-page/landing-page.css
+++ b/landing-page/landing-page.css
@@ -62,6 +62,7 @@ body {
   display: flex;
   flex-direction: row;
   gap: 8rem;
+  padding: ;
 }
 
 .nav-li {
@@ -273,6 +274,10 @@ a:hover {
 
   .img-logo {
     padding-bottom: 1rem;
+  }
+
+  .nav-ul {
+    gap: 5rem;
   }
 
   .names-list li {
