--- a/technical-documentation/technical-documentation-page.css
+++ b/technical-documentation/technical-documentation-page.css
@@ -1,5 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Gentium+Book+Plus:ital@1&family=Lato:wght@100&family=Merriweather:wght@300&family=Nanum+Brush+Script&family=Pathway+Gothic+One&family=Poppins:wght@200&family=Roboto:wght@100;300;500;700&display=swap');
-
 * {
     margin: 0;
     padding: 0;
@@ -7,118 +5,43 @@
     text-decoration: none;
 }
 
-/* 
-    font size for easy rem calculations
-    default document font size = 16px, 1rem = 16px, 100% = 16px
-    (100% / 16px) * 10 = 62.5%, 1rem = 10px, 62.5% = 10px
-*/
-
-html {
-    font-size: 62.5%;
-    scroll-behavior: smooth;
-}
-
 body {
-    background-image: linear-gradient(115deg, rgba(58, 58, 58, 0.9),
-            rgba(120, 150, 195, 0.4)), url(technical-documentation-page-background.jpg);
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
-    background-attachment: fixed;
-    color: gainsboro;
-    font-family: 'poppins', sans-serif;
-    line-height: 1.5;
+    background: linear-gradient(115deg, rgba(58, 58, 58, 0.9),
+            rgba(120, 150, 195, 0.7)), url(technical-documentation-page-background.jpg) no-repeat center center/cover;
+    font-family: 'Roboto', sans-serif;
+    color: #fff;
 }
 
-#nav-container {
-    position: fixed;
-    height: 100%;
-    width: 30rem;
-    min-width: 25rem;
+#page-wrapper {
+    display: flex;
+    gap: 20px;
+    padding: 0 20px;
+    position: relative;
 }
 
-#navbar {
-    border-right: 0.2rem solid gainsboro;
-    height: 100%;
+#nav-bar {
+    min-width: 230px;
+    border-right: solid 2px #dcdcdc;
+    padding: 5px 10px;
 }
 
-#navbar h1 {
-    font-size: 2.5rem;
-    text-align: center;
-    border-bottom: 0.2rem solid gainsboro;
-    padding: 1rem;
+.title {
+    padding: 10px 0
 }
 
-#navbar li {
+.nav-list {
     list-style: none;
-    font-size: 1.8rem;
-    font-weight: 700;
-    border-bottom: 0.2rem solid gainsboro;
-    padding: 0.5rem 2rem 0.5rem 2rem;
 }
 
-#navbar a {
-    color: gainsboro;
+.nav-list li {
+    padding: 10px 0;
 }
 
-#navbar a:hover {
-    background: rgba(14, 25, 45, 0.8);
+.nav-link {
+    color: #dcdcdc;
+    font-size: 1.2rem;
 }
 
-#main-container {
-    position: absolute;
-    margin-left: 30rem;
-    font-size: 2rem;
-    display: block;
-}
-
-.main {
-    background-color: rgba(14, 25, 45, 0.8);
-    padding: 1rem 3rem 1rem 3rem;
-}
-
-.main li {
-    list-style-position: inside;
-    font-weight: bold;
-}
-
-#reference a {
-    color: aqua;
-}
-
-#reference a:hover {
-    color: white;
-}
-
-
-@media (max-width: 1200px) {
-    html {
-        font-size: 60%;
-    }
-}
-
-@media (max-width: 980px) {
-    html {
-        font-size: 55%;
-    }
-}
-
-@media (max-width: 460px) {
-    html {
-        font-size: 50%;
-    }
-
-    #nav-container {
-        width: 20rem;
-    }
-
-    #main-container {
-        margin-left: 25rem;
-    }
-}
-
-@media (max-width: 375px) {
-    html {
-        font-size: 45%;
-    }
+.nav-link:hover {
+    color: aqua
 }
