--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,3 @@
-/*
-font-family: 'Poppins', sans-serif;
-font-family: 'Roboto', sans-serif; 
- */
-
 * {
     margin: 0;
     padding: 0;
@@ -220,11 +215,13 @@ body {
     color: antiquewhite;
     font-weight: 300;
     font-size: 2.5rem;
+    padding: 0 5px;
 }
 
 .author {
     color: antiquewhite;
     letter-spacing: 1px;
+    padding: 0 5px;
 }
 
 .invite {
